* Created functions `getReducedData` and `assignUnassigned`.
* Changed argument `ignoreUnassignedVar` to `filterIgnoresUnassigned` for clarity.
* Removed restriction in `plotClustersWorkflow` that only `clusterType="clusterMany"` allowed.
* Added option `nColLegend` to `plotReducedDims`
* Allow `getClusterManyParams` to search old `clusterMany` runs as well.

Changes in version 2.1.2 ( Release date: 2018-05-17)
==============

Bugs:
* Fix so that estimates of the proportion non-null in `mergeClusters` are always positive.
* Fix so that calculation of filter with `ignoreUnassignedVar` doesn't delete existing base filter of same type.
* Fix `plotClustersWorkflow` where wrong cluster was grabbed to plot.
* Fix bug in `plotDendrogram` where colors of clusters plotted with could be subsumbed by color of previous clustering. (git Issue `#220`)

Changes in version 2.1.1 ( Release date: 2018-05-15)
<<<<<<< HEAD
=======
==============
>>>>>>> develop

Bugs: 
* Fixed error introduced in 2.0.0 where arguments to `mergeCutoff` and `mergeLogFCcutoff` where passed instead to `dendroNDims`.

Changes in version 1.99.4 ( Release date: 2018-04-19)
==============

Changes: 
* Added support for hdf5 files stored in `assay` slot via the `HDF5Array` package
* Removed most defaults from `RSEC` arguments -- pull them from underlying functions' defaults.
* replace `1:` with `seq_len` and `seq_along`

Changes in version 1.99.3 ( Release date: 2018-04-17)
==============

Changes:
* Re-implemented subsampleClustering() and combineMany() to use C++.
* Method "adjP" in `mergeClusters` now allows for further requirement that gene have a minimal log-fold change ('logFCcutoff').

Bugs:
* Fix bug in `setBreaks` (isPositive and isNegative variables)
* use `stringr::str_sort` to make sort of character values locale independent

Changes in version 1.99.2 ( Release date: 2018-03-22)
==============
Bugs:
* Fix `defaultNDims` so that returns minimum of 50 and the minimum dimension of data.